--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,13 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+# macOS files
+.DS_Store
+
+# git config
+.gitconfig
+
+# 11ty files
+_site/*
