--- a/.github/workflows/deploy-gh-page.yml
+++ b/.github/workflows/deploy-gh-page.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies & build
         run: |
           npm ci
-          npm run build
+          npx @11ty/eleventy --pathprefix=11ty-tech-blog
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
