--- a/.github/workflows/deploy-gh-page.yml
+++ b/.github/workflows/deploy-gh-page.yml
@@ -3,7 +3,7 @@ name: Build Eleventy
 on:
   push:
     branches:
-      - test/gh-page
+      - main
 
 jobs:
   build:
@@ -30,7 +30,7 @@ jobs:
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/test/gh-page'
+        if: github.ref == 'refs/heads/main'
         with:
           publish_dir: ./_site
           github_token: ${{ secrets.GITHUB_TOKEN }}
