--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "node": ">=18"
   },
   "keywords": [],
-  "author": { "name":"Thibaut Crenn", "email": "tictechtown@gmail.com"},
+  "author": {
+    "name": "Thibaut Crenn",
+    "email": "tictechtown@gmail.com"
+  },
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-img": "^4.0.2",
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0"
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "prismjs": "^1.29.0"
   }
 }
