--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "markdown-it-attribution": "^0.1.4",
+    "markdown-it-footnote": "^4.0.0",
     "prismjs": "^1.29.0"
   }
 }
